; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-sharedata.c_stringindex.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-sharedata.c_stringindex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.context = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.context*, i8*, i64)* @stringindex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stringindex(%struct.context* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.context*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.context* %0, %struct.context** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load %struct.context*, %struct.context** %4, align 8
  %10 = getelementptr inbounds %struct.context, %struct.context* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @lua_pushlstring(i32* %12, i8* %13, i64 %14)
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @lua_pushvalue(i32* %16, i32 -1)
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @lua_rawget(i32* %18, i32 1)
  %20 = load i32*, i32** %7, align 8
  %21 = call i64 @lua_isnil(i32* %20, i32 -1)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %35

23:                                               ; preds = %3
  %24 = load %struct.context*, %struct.context** %4, align 8
  %25 = getelementptr inbounds %struct.context, %struct.context* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %25, align 8
  store i32 %27, i32* %8, align 4
  %28 = load i32*, i32** %7, align 8
  %29 = call i32 @lua_pop(i32* %28, i32 1)
  %30 = load i32*, i32** %7, align 8
  %31 = load i32, i32* %8, align 4
  %32 = call i32 @lua_pushinteger(i32* %30, i32 %31)
  %33 = load i32*, i32** %7, align 8
  %34 = call i32 @lua_rawset(i32* %33, i32 1)
  br label %40

35:                                               ; preds = %3
  %36 = load i32*, i32** %7, align 8
  %37 = call i32 @lua_tointeger(i32* %36, i32 -1)
  store i32 %37, i32* %8, align 4
  %38 = load i32*, i32** %7, align 8
  %39 = call i32 @lua_pop(i32* %38, i32 2)
  br label %40

40:                                               ; preds = %35, %23
  %41 = load i32, i32* %8, align 4
  ret i32 %41
}

declare dso_local i32 @lua_pushlstring(i32*, i8*, i64) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_rawget(i32*, i32) #1

declare dso_local i64 @lua_isnil(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1

declare dso_local i32 @lua_rawset(i32*, i32) #1

declare dso_local i32 @lua_tointeger(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
